= 0.6.1 / 2011-10-08

  * Removed Error#fullStack and fixed a bug with printing stack traces for
    errors that do not inherit from Error.

= 0.6.0 / 2011-10-05

  * Added view module (supports erb-style templating).

  * Permit a function to be used as the second argument to strata.run.

  * Added option to prevent server from writing to console on startup.

  * Clarified the use of the serverName and serverPort environment variables.

  * Eliminated use of the SERVER_PORT and HTTPS process environment variables.

  * Added rationale to README.

= 0.5.14 / 2011-10-03

  * Added startup message to strata.run.

  * Fixed a regression in strata.handleError.

  * Reworked manual code examples to use strata.run.

= 0.5.13 / 2011-09-30

  * Fixed a regression in strata.createServer.

= 0.5.12 / 2011-09-29

  * Added directory middleware.

= 0.5.11 / 2011-09-27

  * Set Content-Type/Length in error responses from basic auth middleware.

  * Added cascade middleware.

  * Explicitly set "Transfer-Encoding: chunked" for stream response bodies.

  * Removed X-Cascade from utils.notFound.

  * Added "X-Cascade: pass" support to strata.Router. A response containing this
    header will be ignored and subsequent routes will be tried.

= 0.5.10 / 2011-09-26

  * Use "Content-Length: 0" for HEAD requests.

= 0.5.9 / 2011-09-26

  * Better docs around Error reporting and handling.

= 0.5.8 / 2011-09-26

  * Refactored mock.Stream into BufferedStream.

  * Added mock.stream for collecting stream data.

  * Ensured all tests pass lint.

= 0.5.7 / 2011-09-22

  * Refactored stream-like constructors to inherit from Stream so they can
    take advantage of Stream#pipe.

  * Removed all synchronous fs calls from static middleware.

= 0.5.6 / 2011-09-20

  * Ensure all manual chapters are in the correct order.

= 0.5.5 / 2011-09-20

  * Added manual chapter about content negotiation.

  * Some minor documentation tweaks.

= 0.5.4 / 2011-09-20
