@@ -226,9 +226,17 @@ function makeEnv(opts) {
  */
 function handleError(err, env, callback) {
     var stack = err.fullStack || err.stack;
+
+    if (!stack) {
+        // Provide as much information as we can, even though the error
+        // doesn't have a proper stack trace.
+        stack = (err.name || "Error") + ": " + err.message;
+    }
+
     env.error.write("Unhandled error!\n" + stack);
 
     var content = "Internal Server Error";
+
     callback(500, {
         "Content-Type": "text/plain",
         "Content-Length": Buffer.byteLength(content).toString()
